--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.0.1",
   "description": "Block naming convetion helper written on es6",
   "scripts": {
+    "compile": "babel --presets es2015 -d ./lib index.js",
+    "postinstall": "npm run compile",
     "test": "NODE_ENV=development mocha --compilers js:babel-core/register test/index.js"
   },
-  "main": "index.js",
+  "main": "./lib/index.js",
   "engines": {
-    "node": ">=6.0.0",
-    "npm": ">=3.8.6"
-  },
-  "dependencies": {
-    "mocha": "^3.0.2"
+    "node": ">=6.4.0",
+    "npm": ">=3.10.6"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "chai": "^3.5.0"
+    "babel-cli": "^6.14.0",
+    "babel-core": "6.14.0",
+    "babel-preset-es2015": "6.14.0",
+    "chai": "3.5.0",
+    "mocha": "3.0.2"
   }
 }
