--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "Block naming convetion helper written on es6",
   "scripts": {
-    "compile": "babel --presets es2015 -d ./lib index.js",
+    "compile": "./node_modules/.bin/babel --presets es2015 -d ./lib index.js",
     "postinstall": "npm run compile",
     "test": "NODE_ENV=development mocha --compilers js:babel-core/register test/index.js"
   },
