--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "node": ">=6.4.0",
     "npm": ">=3.10.6"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "6.14.0",
-    "babel-preset-es2015": "6.14.0",
+    "babel-preset-es2015": "6.14.0"
+  },
+  "devDependencies": {
     "chai": "3.5.0",
     "mocha": "3.0.2"
   }
