--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "bnc",
   "version": "0.0.1",
-  "description": "Block naming convetion helper written on es6",
+  "description": "Block naming convention helper written on es6",
   "scripts": {
-    "compile": "./node_modules/.bin/babel --presets es2015 -d ./lib index.js",
-    "postinstall": "npm run compile",
-    "test": "NODE_ENV=development mocha --compilers js:babel-core/register test/index.js"
+    "compile": "babel --presets es2015 -d ./dist index.js",
+    "test": "NODE_ENV=development mocha --compilers js:babel-core/register test/index.js",
+    "lint": "eslint index.js"
   },
-  "main": "./lib/index.js",
+  "main": "./dist/index.js",
   "engines": {
     "node": ">=6.4.0",
     "npm": ">=3.10.6"
   },
-  "dependencies": {
-    "babel-cli": "^6.14.0",
-    "babel-core": "6.14.0",
-    "babel-preset-es2015": "6.14.0"
-  },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-eslint": "^10.0.1",
     "chai": "3.5.0",
-    "mocha": "3.0.2"
+    "eslint": "^5.12.1",
+    "mocha": "^5.2.0"
   }
 }
