--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint index.js"
   },
   "main": "./dist/index.js",
+  "types": "./index.d.ts",
   "engines": {
     "node": ">=6.4.0",
     "npm": ">=3.10.6"
